# integral_parallel_computation

./: CMakeLists.txt  README.md  conf.txt  integration.cpp  integration.h  main.cpp  measure_time.h  read_conf.cpp  read_conf.h  script.py
